--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
     "dbmate": "^2.4.0",
     "dotenv": "^16.2.0",
     "express": "^4.18.2",
+    "fs": "^0.0.1-security",
     "jsonwebtoken": "^9.0.0",
     "morgan": "^1.10.0",
     "mysql2": "^3.3.5",
+    "nodemailer": "^6.9.3",
     "supertest": "^6.3.3",
     "typeorm": "^0.3.16",
     "uuidv4": "^6.2.13"
