--- a/package.json
+++ b/package.json
@@ -18,8 +18,11 @@
     "jsonwebtoken": "^9.0.0",
     "morgan": "^1.10.0",
     "mysql2": "^3.3.5",
-    "supertest": "^6.3.3",
     "typeorm": "^0.3.16",
     "uuidv4": "^6.2.13"
+  },
+  "devDependencies": {
+    "jest": "^29.5.0",
+    "supertest": "^6.3.3"
   }
 }
